tools/tests/ui/fail/l1043.cnf
// Test file for error code: L1043
// Expected error: Missing Semantic character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
